Closes #1 Fixed Chips hiding behind image-container
## Solution
* Changed image container height to fit content and gave it a position relative
* Put chips inside the image container

--- a/scss/app.scss
+++ b/scss/app.scss
@@ -348,7 +348,8 @@ footer {
     }
     .image-container {
         width: 100%;
-        height: 200px;
+        height: fit-content;
+        position: relative;
         border-radius: 20px;
     }
     .image-container {
@@ -418,6 +419,7 @@ footer {
             }
         }
         .image-container {
+            height: fit-content;
             img {
                 height: 25vw;
             }
